chore(backend): sync shared code from Pro, reconcile oss/, migrate config by hand
Shared backend sync via copy-src.sh: 122 files added, 97 modified. oss/ and
saas/ untouched on both sides, as the script guarantees.

This tree compiles only because two Pro-side moves landed first. The release
trigger engine, approvals and marketing releases left OssReleaseService for
service/saas behind ReleaseTriggerHook; the device and fleet services left the
shared service tree for service/saas behind DeviceLifecycleHook. Before those,
the sync stopped with 58 compile errors in FleetSupportRiskService and
DeviceLifecycleResolver, both built on Pro-only device models. CE now gets the
hook interfaces with no implementations, which is the honest shape: an artifact
downloaded here carries no device window because there is no device here to make
a commitment about.

Schema: the three-file split arrives whole - schema.graphqls plus user.graphqls
and programmatic.graphqls - and with it /api/programmatic/graphql, its schema and
token controllers and the security chain, byte-identical to Pro. Fields whose
resolvers live in saas/ have nothing to answer them, as Pro-only fields here
always have. One schema, so a customer's queries do not change shape when they
move between editions.

Migrations V83 through V91 copied straight in. Per convention the data layer is
identical across editions even where the logic above some of these tables is
Pro-only, so an installation can move either way without a migration gap.

oss/ is never synced, and the synced tests caught what that left behind:

* OssAnalyticsMetricsService caught Exception per org, so the StackOverflowError
  SchedulerIsolationTest raises walked out and ended the tick for every
  organization behind the bad one. Both loops now run through SchedulerGuard,
  and the per-tick summary is WARN naming the failed orgs. Ported rather than
  copied: Pro's version of this file is built on PerspectiveService, which is
  saas-only.
* OssReleaseSer